5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1800_2565.log
== TEST (2019-06-11 10:26:34) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presença: ')))
c = float(input('carga horaria: '))
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
print([size(a)-rep+falt, rep, falt])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:52) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
print([size(a)-rep+falt, rep, falt])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:27:33) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
print([size(a)-(rep+falt), rep, falt])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:28:04) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
print([size(a)-(rep+falt), rep, falt])
-- EXECUTION TIME:
1.10743
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4, 0, 1]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[3, 0, 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[4, 1, 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:33:20) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
print(array[size(a)-(rep+falt), rep, falt])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:36:08) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(size(a))
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
print([size(a)-(rep+falt), rep, falt])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:53) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:15) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:27) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:58) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3, dtype=int)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:39:21) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3, dtype=int)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 < i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- EXECUTION TIME:
0.949039
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 1]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[3 0 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[4 1 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:40:26) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3, dtype=int)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 >= i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:40:32) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3, dtype=int)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 >= i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- EXECUTION TIME:
1.16413
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[1 0 4]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[4 0 3]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[4 1 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:40:51) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(int('carga horaria: '))
d = zeros(3, dtype=int)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 >= i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- EXECUTION TIME:
1.02777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2565/main.py", line 4, in <module>
    c = float(int('carga horaria: '))
ValueError: invalid literal for int() with base 10: 'carga horaria: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:40:52) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(int('carga horaria: '))
d = zeros(3, dtype=int)
rep = 0
falt = 0
for i in a:
	if i < 5:
		rep += 1
for i in b:
	if c*0.75 >= i:
		falt += 1
d[0]=size(a)-(rep+falt)
d[1]=rep
d[2]=falt
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:51:36) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3, dtype=int)
for i in range(size(a)):
	if a[i]<5:
		d[1]+= 1 
	elif b[i] =< c*0.75:
		d[2] += 1
	else:
		d[0] += 1
print(d)
-- ERROR:
File "XXXX", line 9
    elif b[i] =< c*0.75:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:13) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3, dtype=int)
for i in range(size(a)):
	if a[i]<5:
		d[1]+= 1 
	elif b[i] <= c*0.75:
		d[2] += 1
	else:
		d[0] += 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:05:13) 
-- CODE:
from numpy import *
a = array(eval(input('notas: ')))
b = array(eval(input('presenca: ')))
c = float(input('carga horaria: '))
d = zeros(3, dtype=int)
for i in range(size(a)):
	if a[i]<5:
		d[1]+= 1 
	elif b[i] < c*0.75:
		d[2] += 1
	elif a[i]>= 5 and b[i]>= c*0.75:
		d[0] += 1
	
print(d)
-- EXECUTION TIME:
0.97634
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
